# singlestoredb-extension-sentiment

./: .gitignore  Cargo.toml  Makefile  README.md  create_loader.sh  load_example_data.sql  load_extension.sql  sentiment.sql  sentiment.wit
.github/workflows/: deployment.yaml
example/: load.sql
src/: lib.rs
